--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,9 @@ server.port=8081
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=[email_placeholder]
+spring.mail.password=[password_placeholder]
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
