form validation + small code clearing + DB_basics

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,9 @@ spring.thymeleaf.suffix=.html
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=[email_placeholder]
-spring.mail.password=[password_placeholder]
+spring.mail.username=gamingpass0909xx@gmail.com
+#spring.mail.username=[email_placeholder]
+#spring.mail.password=[password_placeholder]
+spring.mail.password=oozqwhximmzmcxoo
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
